- Fixed permissions not showing.

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -34,9 +34,11 @@
     bottom: 0;
     left: 0;
     margin: auto;
+    padding: 5px;
     background-color: white;
     border-style: solid;
     border-color: teal;
     border-width: 2px;
+    text-align: left;
   }
 }
